--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,1 +1,9 @@
+name: Esto es una demo
+on: [push]
 
+jobs:
+  simple:
+    runs-on: ubuntu-latest
+    steps:
+      -run: echo "Hola mundo"
+      
